Changed Makefile to use c++ instead of g++

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 rollback: rollback.cpp
-	g++ -Wall -lboost_program_options -std=c++11 rollback.cpp -o rollback
+	c++ -Wall -lboost_program_options -std=c++11 rollback.cpp -o rollback
 
 clean:
 	rm rollback
