Renamed to "Rewind"

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-rollback: rollback.cpp
-	c++ -Wall -lboost_program_options -std=c++11 rollback.cpp -o rollback
+rewind: rewind.cpp
+	c++ -Wall -lboost_program_options -std=c++11 rewind.cpp -o rewind
 
 clean:
-	rm rollback
+	rm rewind
