Removed boost argument parser, Currently not working due to getopt() modifying argv

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -1,6 +1,6 @@
 AC_INIT([rewind], [1.0], [rewind@camerongray.me])
 AM_INIT_AUTOMAKE
-CXXFLAGS="$CXXFLAGS -std=c++11 -lboost_program_options"
+CXXFLAGS="$CXXFLAGS -std=c++11"
 AC_PROG_CXX
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
